# ROBIT_INTERN_QT_HW

Keyboard/: CMakeLists.txt
Keyboard/include/: mainwindow.h
Keyboard/src/: mainwindow.cpp
Keyboard/ui/: mainwindow.ui
robot_arm/: CMakeLists.txt
robot_arm/include/: robot_arm.h
robot_arm/src/: main.cpp  robot_arm.cpp
robot_arm/ui/: robot_arm.ui
